Extract sdk versions to root gradle

--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -4,9 +4,9 @@ apply plugin: 'kotlin-android'
 android {
     defaultConfig {
         namespace "org.galio.bussantiago.shared"
-        compileSdk 34
-        minSdkVersion 26
-        targetSdkVersion 34
+        compileSdk rootProject.ext.compileSdkVersion
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
