--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ android {
     defaultConfig {
         applicationId "org.galio.bussantiago"
         namespace "org.galio.bussantiago"
-        compileSdk 34
-        minSdkVersion 26
-        targetSdkVersion 34
+        compileSdk rootProject.ext.compileSdkVersion
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 53
         versionName "4.2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
