--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,13 @@ buildscript {
     }
 }
 
+// Sdk versions
+ext {
+    compileSdkVersion = 34
+    minSdkVersion = 26
+    targetSdkVersion = 34
+}
+
 allprojects {
     repositories {
         google()
