--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,23 @@ test-core = "1.6.1"
 roboelectric = "4.10.3"
 test-runner = "1.6.2"
 retrofit = "2.4.0"
+okhttp-interceptor = "4.2.1"
 compose = "1.1.1"
 compose-theme-adapter = "1.1.1"
 play-review = "2.0.2"
 navigation = "2.8.9"
+junit-ext = "1.2.1"
+mockwebserver = "4.2.1"
+commons-io = "2.6"
+constraintlayout = "2.1.4"
+viewmodel = "2.2.0"
+play-services-maps = "19.0.0"
+play-services-location = "21.3.0"
+coroutines = "1.8.0"
+desugaring = "2.0.4"
+arch-core-testing = "2.1.0"
+espresso = "3.5.1"
+test-rules = "1.3.0"
 
 [libraries]
 koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -19,6 +32,16 @@ junit = { module = "junit:junit", version.ref = "junit" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 mockito = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
+junit-ext = { module = "androidx.test.ext:junit-ktx", version.ref = "junit-ext" }
+mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "mockwebserver" }
+commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
+constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
+viewmodel = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "viewmodel" }
+coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugaring" }
+arch-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "arch-core-testing" }
+espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+test-rules = { module = "androidx.test:rules", version.ref = "test-rules" }
 
 # Instrumented tests
 test-core = { module = "androidx.test:core-ktx", version.ref = "test-core" }
@@ -28,6 +51,7 @@ test-runner = { module = "androidx.test:runner", version.ref = "test-runner" }
 # Retrofit
 retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp-interceptor" }
 
 # Compose libraries
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
@@ -44,4 +68,9 @@ play-review-ktx = { module = "com.google.android.play:review-ktx", version.ref =
 # Navigation
 navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
 navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
+
+# Play Services
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "play-services-maps" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "play-services-location" }
+
 
