--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,6 +7,8 @@ android {
         compileSdk rootProject.ext.compileSdkVersion
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+
+        consumerProguardFiles 'consumer-rules.pro'
     }
 
     compileOptions {
