--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
       android:name=".features.MainActivity"
       android:screenOrientation="portrait"
       android:exported="true"
+      android:launchMode="singleTop"
       tools:ignore="DiscouragedApi">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
