Lint check dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ android {
         checkAllWarnings true
         ignoreWarnings false
         htmlReport true
+        checkDependencies true
         // Disable the check for invalid references like java.adapter due to
         // "Invalid package reference in com.android.tools:desugar_jdk_libs_configuration" error
         disable 'InvalidPackage'
