--- a/widget/src/main/AndroidManifest.xml
+++ b/widget/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
       android:label="@string/select_stop"
       android:screenOrientation="portrait"
       android:exported="false"
-      tools:ignore="DiscouragedApi">
+      tools:ignore="DiscouragedApi,LockedOrientationActivity">
       <intent-filter>
         <action android:name="android.apwidget.action.APPWIDGET_CONFIGURE" />
       </intent-filter>
