--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         compileSdk rootProject.ext.compileSdkVersion
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 54
+        versionCode 55
         versionName "4.2.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "app_version", "v${defaultConfig.versionName}"
@@ -77,6 +77,7 @@ android {
         checkAllWarnings true
         ignoreWarnings false
         htmlReport true
+        checkDependencies true
         // Disable the check for invalid references like java.adapter due to
         // "Invalid package reference in com.android.tools:desugar_jdk_libs_configuration" error
         disable 'InvalidPackage'
@@ -141,6 +142,9 @@ dependencies {
 
     // Mockito
     testImplementation(libs.mockito)
+
+    // Provides a mock Android environment for the Navigator
+    testImplementation(libs.roboelectric)
 
     testImplementation(libs.junit)
 
