Migrate Incidences screen to compose (#97)
* Migrate incidences screen to Compose

* Wrap Composable with ButSantiagoTheme

* Added Divider to incidences list

* Add title to incidences item

* Implement navigation safe args for Incidences

* Remove unused code

* Remove unnecessary sorting login in Incidences

* Add tooling to make @Preview available in release

* Implement navigation to dialog

* Create IncidencesUserInteractions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 // First, we try to access to CircleCI environment variable,
 // if this is a local build, we obtain api key from a local file
@@ -98,7 +99,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.7"
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
 }
 
@@ -134,6 +135,7 @@ dependencies {
     implementation(libs.compose.foundation)
     implementation(libs.compose.material)
     implementation(libs.compose.runtime.livedata)
+    implementation(libs.compose.ui.tooling.preview)
     debugImplementation(libs.compose.ui.tooling)
     implementation(libs.compose.theme.adapter)
 
